# TrenchBotAi

./: .env.example  .env.runpod  .gitignore  .gitmodules  08-06 TrenchBotAi work summary.txt  2025-08-07-this-session-is-being-continued-from-a-previous-co.txt  BLOCKCHAIN_INFRASTRUCTURE.md  Cargo.toml  Docker.dev  Dockerfile  Dockerfile.complete  Dockerfile.minimal  Dockerfile.runpod  Dockerfile.train  QUICK_START.md  README_DEVELOPMENT.md  RUNPOD_DEPLOYMENT.md  SystemImplementation.txt  build.rs  comprehensive_performance_report.json  comprehensive_performance_report.py  copy_trading_showcase.rs  deploy_automated.sh  deploy_complete.sh  deploy_runpod.sh  deploy_runpod_simple.sh  deploy_to_runpod.sh  deploy_with_apis.sh  devnet_bot_test.py  diagnostic_report_20250804_221752.json  diagnostic_report_20250804_221915.json  docker-compose.yml  isolated_blockchain_test.rs  isolated_test  layout.txt  libanomaly.rlib  libarbitrage.rlib  libascii_art.rlib  libattack.rlib  libchains.rlib  (+66 more)
.claude/agents/: solana-trading-architect.md
benches/: ai_performance_benchmarks.rs  blockchain_performance.rs  pipeline_latency.rs
configs/: global.toml  logging.toml  mev.toml  sinks.toml  sonar.toml  telegram.toml
configs/chains/: solana.toml
examples/: blockchain_performance_demo.rs  data_sources_demo.rs  gpu_training_demo.rs  quantum_realtime_demo.rs  rug_pull_detection_example.rs  runescape_demo.rs  sdk_usage.rs  themes_showcase.rs  ultra_fast_copy_trading_demo.rs
grafana/: alerts.json  combat_dashboard.json  dashboard.json  whale_dashboard.json
notebooks/: whale_analysis.ipynb
scripts/: analyze_batches.wl  analyze_bundles.wl  build.rs  calibrate_rations.wl  claude_doctor.py  health_check.sh  migrate_whale_data.py  performance_monitor.py  predict_profit.wl  prepare_training.wl  quick_benchmark.sh  run_benchmarks.sh  run_performance_tests.sh  runpod_startup.sh  scan_mods.rs  setup_runpod.sh  setup_telegram_bot.sh  start_services.sh  telegram_mev_bot.py  train_joint_model.wl  train_model.py  train_token_models.wl
src/: lib.rs  lib_minimal.rs  main.rs  main_minimal.rs  metric.rs  quick_test.rs  standalone_test.rs  types.rs
src/ai_engines/: causal_inference.rs  flash_attention.rs  hardware_accelerator.rs  mod.rs  quantum_graph_nn.rs  spiking_neural_net.rs
src/ai_training/: causal_trainer.rs  flash_attention_trainer.rs  mod.rs  quantum_gnn_trainer.rs  spiking_trainer.rs  training_data_generator.rs
src/analytics/: contract_analyzer.rs  mod.rs  performance_tracker.rs  rug_pull_alerts.rs  rug_pull_detector.rs  rug_pull_monitor.rs  rug_pull_system.rs
src/api/: metric.rs  mod.rs  server.rs  stats.rs  websocket.rs
src/blockchain/: listener.rs  whale_tracker.rs
src/bread/: mod.rs
src/configs/: hardware.toml
src/core/: error.rs  mod.rs  state.rs  stealth.rs  transaction.rs  wallet.rs
src/cyber/: mod.rs
src/dev/: mod.rs
src/engine/: mod.rs
src/execution/: mod.rs
src/flash_loans/: atomic_executor.rs  liquidator.rs  mango.rs  mod.rs  solend.rs
src/gpu/: processor.rs
src/gpu_ai/: graph_neural_engine.rs  mod.rs  monte_carlo_engine.rs  neural_architecture_search.rs  quantum_prediction.rs  transformer_engine.rs
src/infrastructure/: blockchain_service.rs  data_aggregator.rs  helius.rs  jupiter.rs  mod.rs  omniscient_monitoring.rs  performance_monitor.rs  quantum_error_defense.rs  quantum_realistic_systems.rs  quantum_realtime.rs  quantum_streaming.rs  scalable_config.rs  solana_rpc.rs  solscan.rs  stealth_wallet_system.rs  transaction_monitor.rs  trench_language.rs  watchlist_manager.rs  zero_latency_stealth.rs
src/integration/: joint.rs
src/integrations/: dynamic_response_engine.rs  mod.rs  notification_system.rs  phantom_wallet.rs  ranking_system.rs  telegram_integration.rs  trenchware_ui.rs
src/justice/: mod.rs  probabilistic_scammer_hunter.rs
src/mev/: gas_optimization.rs  mempool_monitor.rs  mod.rs
src/modules/: mod.rs  simulation.rs
src/observability/: forensic.rs  metrics.rs  mod.rs
src/orchestrator/: mod.rs
src/risk/: mod.rs  risk_management.rs
src/sdk/: config.rs  handlers.rs  integration.rs  mod.rs  permissions.rs  tests.rs  tool_confirmation.rs
src/service/: mev_service.rs
src/simulation/: mod.rs  trading_modes.rs
src/sniper/: adaptive_memecoin_sniper.rs  mod.rs
src/social/: copy_trading.rs  mod.rs  ultra_fast_copy_executor.rs
src/strategies/: capital_mev_strategies.rs  capital_strategies.rs  capital_tiers.rs  competitive_trading.rs  counter_rug_pull.rs  mod.rs  portfolio_optimization.rs  position_sizing.rs  predictor.rs  quantum_mev_warfare.rs  risk_management.rs  router.rs  token_predictor.rs
src/tests/: mod.rs
src/training/: mod.rs
src/ui/: mod.rs
src/utils/: checkpoint.rs  mod.rs
src/war/: circuit_breakers.rs  engine.rs  integration_tests.rs  mod.rs  munitions.rs  position_management.rs  receipts.rs  runescape_rankings.rs  tracking.rs  ultra_low_latency.rs  warfare_themes.rs
tests/: api_integration_tests.rs  capital_tier_integration_tests.rs  comprehensive_system_validation.rs  minimal_integration_tests.rs  runescape_integration_test.rs  stress_tests.rs
(+92 files in other folders)
