[package]
name = "trenchbot-dex"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# --- Core ---
tokio = { version = "1.32", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env", "json"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

# --- Monitoring (Optional) ---
metrics-exporter-prometheus = { version = "0.8", optional = true }
prometheus = { version = "0.13", optional = true }
lazy_static = "1.4"

# --- Solana ---
solana-client = "2.0"
solana-sdk = "2.0"
solana-program = "2.0"
solana-transaction-status = "2.0"

# --- APIs ---
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.20"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "limit"] }

# --- UI/Terminal ---
crossterm = "0.27"

# --- AI SDK ---
anthropic = "0.0.8"
async-trait = "0.1"

# --- MEV ---

# --- Optional AI (safe to keep for CPU) ---
tch = { version = "0.14", optional = true }
tract-onnx = { version = "0.21", optional = true }
tract-core = { version = "0.21", optional = true }
wolfram_wxf = { version = "0.3", optional = true }

# --- Performance ---
rayon = "1.8"
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"  # Linear algebra for quantum algorithms
simba = "0.8"
wide = "0.7"  # SIMD operations
rand = "0.8"  # Random number generation for AI engines
fastrand = "2.0"  # Fast random for demos and stress tests

# --- Ultra-Low Latency ---
crossbeam = "0.8"  # Lock-free data structures
parking_lot = "0.12"  # Faster mutexes
futures-util = "0.3"  # WebSocket utilities
base64 = "0.21"  # Fast base64 decoding
memmap2 = "0.9"  # Memory-mapped files
rtrb = "0.2"  # Real-time ring buffer
# ed25519-dalek = { version = "2.0", features = ["batch", "std"] }  # Fast signature verification (conflicts with Solana)

# --- AWS ---
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }

# --- Additional Dependencies ---
mongodb = { version = "2.0", optional = true }
rdkafka = { version = "0.36", optional = true }
redis = { version = "0.23", optional = true }
spl-token = { version = "4.0", optional = true }
futures = "0.3"
figlet-rs = "0.1"
sysinfo = "0.30"
log = "0.4"
num_cpus = "1.16"

# --- Optional AI/Hardware Acceleration Dependencies ---
candle-core = { version = "0.3", optional = true }

[lib]
name = "trenchbot_dex"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = ["core"]
core = []  # Core trading functionality only
monitoring = ["metrics-exporter-prometheus", "prometheus"]
gpu = ["tch", "candle-core"]
ai = ["tract-onnx", "tract-core"]
wolfram = ["wolfram_wxf"]
aws = ["aws-config", "aws-sdk-s3", "zstd"]
mongodb = ["dep:mongodb"]
kafka = ["rdkafka"]
redis = ["dep:redis"]
spl-token = ["dep:spl-token"]
cuda = []
training = ["gpu", "ai"]
runpod-minimal = ["core", "monitoring"]  # Minimal RunPod deployment
runpod = ["training", "monitoring"]  # Full RunPod deployment

[[bin]]
name = "trenchbot-dex"
path = "src/main.rs"

[[bin]]
name = "standalone_test"
path = "src/standalone_test.rs"

[[bin]]
name = "quick_test"
path = "src/quick_test.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
